Remove database wrapper. Add DB mapping stuff. Add array utility. Modify collections. Add Actor class to the engine. Update docs

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -9,10 +9,10 @@
       "output": {
         ".html": {
           "relative_path": "api/XeonCore.Collections.Generic.MutList-1.html",
-          "hash": "yZLbR3swpe0WqjK4JR/4dg=="
+          "hash": "OH0V6+8H9Bv2+LGSs1F+Ww=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -24,19 +24,7 @@
           "hash": "DzRD0s6pGyuZjLuzF/MUiw=="
         }
       },
-      "is_incremental": true,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api/XeonCore.Database.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/XeonCore.Database.html",
-          "hash": "nxHwtxE6s8UnT5W+8mkUsQ=="
-        }
-      },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -48,7 +36,7 @@
           "hash": "+mP7d6oXskhr7iSFvtNZFA=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -60,7 +48,7 @@
           "hash": "vvKjy8pJKSKMoSrheM3XyQ=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -72,7 +60,7 @@
           "hash": "Xj/xu/I7rXVFIwD3rs279A=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -81,7 +69,7 @@
       "output": {
         ".html": {
           "relative_path": "api/XeonCore.Game.IContainer.html",
-          "hash": "P9GjCNI6LpuhpsiBmgpgNA=="
+          "hash": "DfCrkjQz3I/qOk+s4rbG5g=="
         }
       },
       "is_incremental": false,
@@ -93,7 +81,7 @@
       "output": {
         ".html": {
           "relative_path": "api/XeonCore.Game.IEntity.html",
-          "hash": "tpOS9iWOeCsTxmNbA38v4A=="
+          "hash": "09xOHxp1KkbYjFXmfsH4Rg=="
         }
       },
       "is_incremental": false,
@@ -120,7 +108,7 @@
           "hash": "VF4aW1ppqy9i+XAnqtaqcA=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -132,7 +120,7 @@
           "hash": "7XP4OZDliAsJvbtUUuuosA=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -144,7 +132,7 @@
           "hash": "U/+HNRwQVuhAklBjNEVfcw=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -156,7 +144,7 @@
           "hash": "LhV0um1EMURkbWdaWXrlVw=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -168,7 +156,7 @@
           "hash": "Zi3ZhorvfTMUHsbYUXkvng=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -180,7 +168,7 @@
           "hash": "2fUzvl1CuzuLoY5ITcDgxA=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -209,26 +197,26 @@
     },
     {
       "type": "ManagedReference",
-      "source_relative_path": "api/XeonCore.TypeRegister-1.yml",
+      "source_relative_path": "api/XeonCore.Util.Array.yml",
       "output": {
         ".html": {
-          "relative_path": "api/XeonCore.TypeRegister-1.html",
-          "hash": "KqpD67npX+DzDP14QOM4Qw=="
+          "relative_path": "api/XeonCore.Util.Array.html",
+          "hash": "ZzZiZn9Zsv4F8O1Ij/zEHw=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
       "type": "ManagedReference",
-      "source_relative_path": "api/XeonCore.yml",
+      "source_relative_path": "api/XeonCore.Util.yml",
       "output": {
         ".html": {
-          "relative_path": "api/XeonCore.html",
-          "hash": "ZsJZ5oAkb40lQunPWXArQg=="
+          "relative_path": "api/XeonCore.Util.html",
+          "hash": "TNEBtY26ZnmUZhLCk9ziMA=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -240,7 +228,7 @@
           "hash": "fwEPRh2R6usUVrej2sB5kA=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -249,7 +237,7 @@
       "output": {
         ".html": {
           "relative_path": "api/toc.html",
-          "hash": "SmeQQn3AUVEbeG+ZnvNOHw=="
+          "hash": "SNes/2MrjnKkO176ND8dXw=="
         }
       },
       "is_incremental": false,
@@ -302,8 +290,8 @@
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": true,
           "incrementalPhase": "build",
-          "total_file_count": 19,
-          "skipped_file_count": 18
+          "total_file_count": 18,
+          "skipped_file_count": 13
         },
         "ConceptualDocumentProcessor": {
           "can_incremental": true,
